--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,14 @@ html,body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
 }
+
+.mt-page{
+    margin-top: 90px;
+}
+
+select {
+    border: 0px;
+    background-color: #fff;
+    cursor: pointer;
+    width: 100%;
+}
